PROJECT ( split4sync )
ADD_EXECUTABLE( s4s main.c )
SET ( CMAKE_INSTALL_PREFIX /usr/local )
INSTALL ( TARGETS s4s DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/ )

enable_testing()
find_package(Python3 COMPONENTS Interpreter)
if(Python3_Interpreter_FOUND)
    add_test(NAME test1 COMMAND Python3::Interpreter test/test.py WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
else()
    message("Python3 not found. no tests")
endif()